crates/core/src/commands/transcode/tests/snapshots/caesura__commands__transcode__tests__additional_job_tests__rgb16_png_to_jpg_is_converted.snap
---
source: crates/core/src/commands/transcode/tests/additional_job_tests.rs
expression: snapshot
---
- directory: ~
  filename: cover.jpg
  size: 8126
  sha256: 94d614426bcdd56ecf2f6b481693b676a3765c0b3ecf611ff5d0223683804a94
  image:
    width: 320
    height: 240
    color_type: Rgb8
