crates/core/src/commands/transcode/tests/snapshots/caesura__commands__transcode__tests__additional_job_tests__small_image_is_not_resized.snap
---
source: crates/core/src/commands/transcode/tests/additional_job_tests.rs
expression: snapshot
---
- directory: ~
  filename: cover.jpg
  size: 3130
  sha256: 7c2325f8e0af35d9db767488f9f3f502907639271fb98fbbb9a7cda56a204b1a
  image:
    width: 200
    height: 150
    color_type: Rgb8
